# Neutronsketch-KBS

./: data  datasets.txt
GCond/: gcond_agent_induct.py  gcond_agent_transduct.py  tester_other_arcs.py  utils.py  utils_graphsaint.py
GraphCoarse/GCN/: dataset  network.py  train.py  utils.py
GraphCoarse/GCN/params/: checkpoint-best-acc.pkl
GraphSkeleton/: .gitignore  datasets
GraphSkeleton/skeleton_compress/: CMakeLists.txt  dataloader.py  dataset  gs.py  skeleton_compression.py
GraphSkeleton/skeleton_compress/src/: skeleton.cc
GraphSkeleton/skeleton_test/dgraph/: dataloader.py  gnn.py  gnn_mini_batch.py  tmp
GraphSkeleton/skeleton_test/dgraph/config/: gcn.yaml  sage.yaml
NeutronSketch/: .gitignore  CMakeLists.txt  draw.py  gcn_cora_cluster.cfg  gcn_cora_sample.cfg  gcn_sample_cache.cfg  gcn_sample_gpu.cfg  gcn_sample_gpu_arxiv_trans.cfg  gin_cora.cfg
NeutronSketch/core/: FullyRepGraph.hpp  GraphSegment.cpp  GraphSegment.h  MetisPartition.hpp  NtsScheduler.hpp  coocsc.hpp  graph.hpp  ntsContext.hpp  ntsDataloador.hpp  ntsMiniBatchGraphOp.hpp  ntsSampler.hpp
NeutronSketch/cuda/: ntsCUDA.hpp  ntsCUDAGraphOP.cu
NeutronSketch/exp/exp-sketch/: count-details.py  count-result.py  draw-diff-hyps.py  draw-diff-nbr-sim-hot.py  draw-diff-nbr-sim.py  draw-diff-nodes-per.py  draw-diff-sim-per.py  draw-experment-result-acc.py  draw-experment-result-hd.py  draw-experment-result-time.py  draw-experment-result.py  draw-label-class.py  draw-nbr-details-bar.py  draw-nbr-details-result.py  draw-nbr-details.py  draw-result.py  exp.cfg  run-exp-nbr-sim.py  run_nts.sh  test  utils.py
NeutronSketch/toolkits/: GCN_CPU_CLUSTER.hpp  GCN_CPU_CLUSTER.hpp.tmp.bak  GCN_CPU_NEIGHBOR.hpp  GCN_GPU_NEIGHBOR-SELECT-NODES.hpp  GCN_GPU_NEIGHBOR-exp3 copy.hpp  GCN_GPU_NEIGHBOR-exp3.hpp  GCN_GPU_NEIGHBOR-exp3.hpp.bak  GCN_GPU_NEIGHBOR-test.hpp  GCN_GPU_NEIGHBOR.hpp  GCN_GPU_NEIGHBOR_degree_test.hpp  GCN_GPU_NEIGHBOR_degree_test.hpp.bak  main.cpp
NeutronSketch/utils/: torch_func.hpp
PTDNet/: .gitignore  config.py  models.py  train_PTDNet.py  train_dropedge.py  utils.py
(+2 files in other folders)
